# digital_thermal_right_lcd

./: DEVICE_CONFIGS.md  README.md  config.json  layout.json  pyproject.toml  requirements.txt
conf/: config.json  thermalright_hr-10_2280_pro.json
docs/: ARCHITECTURE.md
src/: config.py  config_parser.py  controller.py  device_configurations.py  displayer.py  get_amd_power.py  indexes.py  led_display_ui.py  metrics.py  utils.py
src/device_configs/: pearless_assasin_120.json  pearless_assasin_140.json  pearless_assasin_140_big.json  tr_assassin_x_120r.json
tests/: generate_references.py  helpers.py  test_get_state.py
tests/references/pearless_assasin_120/: metrics_edge.json  metrics_normal.json  time_edge.json  time_normal.json
tests/references/pearless_assasin_140/: cpu_edge.json  cpu_normal.json  gpu_edge.json  gpu_normal.json
tests/references/pearless_assasin_140_big/: cpu_edge.json  cpu_normal.json  gpu_edge.json  gpu_normal.json
tests/references/thermalright_hr-10_2280_pro/: temp_edge.json  temp_normal.json  time_edge.json  time_normal.json  usage_edge.json  usage_normal.json
tests/references/tr_assassin_x_120r/: cpu_temp_edge.json  cpu_temp_normal.json  cpu_usage_edge.json  cpu_usage_normal.json
